src/components/Items/style.css
.container_list {
  max-height: 250px;
  width: 350px;
  margin: 0 auto;
  margin-bottom: 8px;
  overflow: scroll;
  overflow-x: hidden;
}

.container_list::-webkit-scrollbar {
   width:5px;
}

.container_list::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
   border-radius: 10px;
}

.container_list::-webkit-scrollbar-thumb {
   border-radius: 10px;
   box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
}


.ul_list {
  width: 97%;
  display: flex;
  margin-bottom: 5px;
  
  align-items: center;
}

.li_list {
  list-style: none;
}

.li_list_cantidad {
  list-style: none;
  width: 20px;
  margin: 0 10px;
}

.li_list_descripcion {
  list-style: none;
  width: 140px;
  margin: 0 0px;
}

.li_list_descripcion_Check {
  list-style: none;
  width: 150px;
  margin: 0 0px;
  text-decoration: line-through black 2px solid;
  opacity: 0.6;
}

.li_list_precio {
  list-style: none;
  width: 50px;
  margin-right: 20px;

}

.checkBackContainer {
  
  display: flex;
  flex-direction: row;
  width: 100px;
  
}
.checkedContainer{
  display: flex;
  width: 100px;
  justify-content: center;
  align-items: center;
}
.btn_check {
  background-color: #00FF47;
  color: #555;
  border: none;
  margin: 0 5px;
  padding:  7px 8px;
  cursor: pointer;
  
}
.btn_delete {
  background-color: #FE5757;
  border: none;
  margin: 0 5px;
  padding:  7px 8px;
  cursor: pointer;
}

.btn_back {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.input_precio {
  -webkit-appearance: none;
  -moz-appearance: textfield;

  padding: 3px;
  border: 1px solid #999;
  border-radius: 3px;
  width: 50px;
}

